Minor changes in syntax for caption

--- a/qmChan/pcubedQbit.tex
+++ b/qmChan/pcubedQbit.tex
@@ -90,11 +90,10 @@
     \path[->, black] (1,-.75) edge [bend right] node[below, black] {$\CC$} (3,-1.75);
     \path[->, red] (6.25,-.5) edge [bend left] node[below right, red] {$\DC$} (4.5,-1.75);
 
-\node[align=left] at (3.75,-3.) () {\footnotesize Caption: Schematic
-representation of a degradable qubit channel $\BC$ \\ 
-\footnotesize with a qubit complement $\CC$ and degrading map $\DC$.\\ 
-\footnotesize For details, see Sec. IV.A in
-Phys. Rev. A 94, 052331 (2016)};
+\node[align=left, font = \footnotesize] at (3.75,-3.) () {Schematic
+representation of a degradable qubit channel $\BC$ \\ with a qubit complement
+$\CC$ and degrading map $\DC$.\\ For details, see Sec. IV.A in Phys. Rev. A 94,
+052331 (2016)};
 
 \end{tikzpicture}
 
