--- a/qmChan/qubitDephasing.tex
+++ b/qmChan/qubitDephasing.tex
@@ -68,9 +68,10 @@
 \node[blue] at (2.85,-.5) (CC) {\normalsize $\CC(\rho) = \mte{+}{\rho}\, [\chi_+] + \mte{-}{\rho}\, [\chi_-]$};
 \node[blue] at (2.52,-.8) (chi) {\normalsize $\ket{\chi_{\pm}} = \sqrt{1-p} \; \ket{0} \pm \sqrt{p} \; \ket{1}$};
 
-\node[align=left] at (1,-1.75) () {\normalsize Caption: Enclosed inside a Bloch sphere
-    (in black), an ellipsoid (in red) and line (in blue)\\ representing the locus
-    of Bloch vectors of $\BC$ and $\CC$ respectively where $p = 0.3$};
+\node[align=left, font = \normalsize] at (1,-1.75) () {Enclosed inside a Bloch
+    sphere (in black), an ellipsoid (in red) and line (in blue)\\ representing
+    the locus of Bloch vectors of $\BC$ and $\CC$ respectively where $p =
+    0.3$};
 
 \end{tikzpicture}
 
