Minor changes in two figures

--- a/qmChan/unitaryIsometry.tex
+++ b/qmChan/unitaryIsometry.tex
@@ -34,7 +34,7 @@
     \node [int] at (2.5,2) (c) {$\HC_b$};
     \node [below of = c, node distance=.6cm] (bT) {\footnotesize out};
     \node [int] at (2.5,0) (d) {$\HC_c$};
-    \node [above of = d, node distance=.6cm] (bT) {\footnotesize env.};
+    \node [above of = d, node distance=.6cm] (cT) {\footnotesize env.};
     
     \path[->] (a) edge              node         {} (b);
     \path[->] (e) edge              node         {} (b);
